# ori-runtime

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  PRINCIPLES.md  README.md  SECURITY.md  ori.linux.yaml.example  ori.yaml.example  ori.yaml.phone.example  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-pi.in  requirements-pi.txt  requirements.in  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: CAPABILITY_MATRIX.md  MQTT_SECURITY.md  alpha-release-notes.md  beta-release-notes.md  linux-setup.md
docs/releases/: alpha-release-notes.md  beta-release-notes.md  v0.1.0-alpha.2.md  v0.1.0-alpha.3.md  v0.1.0-alpha.4.md  v0.9.0-beta.1.md  v0.9.0-beta.2.md
docs/review/: local-pr-review.md
ori/: config.py  gateway_export.py  gateway_reasoning.py  runtime.py  runtime_health_socket.py
ori/actions/: alert_failover.py  coap.py  logger.py  process_manager.py  relay.py  sms.py  system_control.py  whatsapp.py
ori/gateway/: export.py  heartbeat.py  mqtt_security.py  node_heartbeat.py  reasoning.py
ori/hal/: base.py  coap_adapter.py  growatt_adapter.py  http_adapter.py  i2c_adapter.py  lorawan_adapter.py  mqtt_adapter.py  mqtt_base.py  mqtt_perception_adapter.py  opcua_adapter.py  protocol_registry.py  psutil_adapter.py  serial_adapter.py  smart_adapter.py  usb_serial_adapter.py  victron_adapter.py  zigbee_adapter.py
ori/hardware/: led_indicator.py
ori/network/: deduplicator.py  event_bus.py  events.py  sms_webhook.py
ori/policy/: device_policy.py  remote_fetch.py
ori/reasoning/: action_dispatcher.py  capability_posture.py  causal_memory.py  context_enricher.py  elevator.py  escalation_policy.py  local_llm.py  rule_engine.py
ori/security/: gateway_messages.py  offline_tokens.py  remote_command_lockout.py  remote_command_policy.py  remote_command_responses.py  remote_command_throttle.py  remote_commands.py  threshold_guard.py
ori/skills/: composer.py  hooks_api.py  loader.py  os_sandbox.py  sandbox.py  signing.py
ori/state/: store.py
ori/utils/: bool_utils.py  time_utils.py
scripts/: bootstrap.sh  build-wheelhouse.sh  check_workflows.py  guard-capability-matrix.sh  install-phone.sh  install-pi.sh  pc_health_report.py  smoke-runtime-local.sh  typecheck-boundaries.sh
skills/battery-lifecycle-observer/: hooks.py  skill.yaml
skills/energy-anomaly-detector/: hooks.py  skill.yaml
skills/hvac-refrigerant-monitor/: hooks.py  skill.yaml
skills/pc-network-threat-monitor/: hooks.py  skill.yaml
skills/pc-system-health/: hooks.py  skill.yaml
skills/retail-occupancy-optimizer/: hooks.py  skill.yaml
skills/site-safety-ppe/: hooks.py  skill.yaml
skills/solar-performance-monitor/: hooks.py  skill.yaml
skills/template/: hooks.py  skill.yaml
tests/: test_action_dispatcher.py  test_alert_failover.py  test_battery_lifecycle_skill.py  test_bool_utils.py  test_capability_posture.py  test_causal_memory.py  test_circuit_breaker.py  test_coap_action.py  test_coap_adapter.py  test_compaction.py  test_config.py  test_context_enricher.py  test_deduplicator.py  test_elevator.py  test_energy_anomaly_skill.py  test_energy_throttle.py  test_event_bus.py  test_events.py  test_external_watchdog.py  test_gateway_export.py  test_gateway_heartbeat.py  test_gateway_messages.py  test_gateway_mqtt_security.py  test_gateway_reasoning.py  test_growatt_adapter.py  test_http_adapter.py  test_hvac_skill.py  test_i2c_adapter.py  test_led_indicator.py  test_local_llm.py  test_logger.py  test_lorawan_adapter.py  test_mqtt_adapter.py  test_mqtt_perception_adapter.py  test_network_threat_skill.py  test_offline_tokens.py  test_opcua_adapter.py  test_os_sandbox.py  test_ppe_skill.py  test_process_manager.py  (+27 more)
