[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ori-runtime"
version = "0.1.0"
description = "Offline-first agentic IoT runtime — give physical devices the ability to reason"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ori Technologies", email = "hello@ori.dev" }
]
keywords = ["iot", "edge-ai", "agentic", "llm", "raspberry-pi", "offline-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"

dependencies = [
    "pyyaml>=6.0",
    "paho-mqtt>=2.0",
    "psutil>=5.9",
    "pyserial>=3.5",
    "aiofiles>=23.0",
    "twilio>=9.0",
    "africastalking>=1.0",
    "python-dotenv>=1.0",
    "anthropic>=0.28",
]

[project.optional-dependencies]
pi = [
    "gpiozero>=2.0",
    "smbus2>=0.4",
    "RPi.GPIO>=0.7",
]
llm = [
    "llama-cpp-python>=0.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
ori-runtime = "ori.runtime:main"

[project.urls]
Homepage = "https://ori.dev"
Repository = "https://github.com/ori-platform/ori"
Documentation = "https://docs.ori.dev"
Issues = "https://github.com/ori-platform/ori/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ori*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]


[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_imports = true