[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ori-runtime"
version = "0.9.0b1"
description = "Offline-first agentic IoT runtime — give physical devices the ability to reason"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ori Nexus Systems LTD", email = "wasiubakare@gmail.com" }
]
keywords = ["iot", "edge-ai", "agentic", "llm", "raspberry-pi", "offline-first"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"

dependencies = [
    "pyyaml>=6.0",
    "paho-mqtt>=2.0",
    "psutil>=5.9",
    "pyserial>=3.5",
    "asyncua>=1.1",
    "aiofiles>=23.0",
    "httpx>=0.28",
    "cryptography>=46.0.7",
    "twilio>=9.0",
    "africastalking>=1.0",
    "python-dotenv>=1.0",
    "urllib3>=2.7.0",
]

[project.optional-dependencies]
pi = [
    "gpiozero>=2.0",
    "smbus2>=0.4",
    "RPi.GPIO>=0.7",
]
llm = [
    "llama-cpp-python>=0.2",
]
cloud = [
    "anthropic>=0.28",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "ruff>=0.4",
    "mypy>=1.18",
    "types-PyYAML>=6.0",
]

[project.scripts]
ori-runtime = "ori.runtime:main"

[project.urls]
Homepage = "https://github.com/ori-platform/ori-runtime"
Repository = "https://github.com/ori-platform/ori-runtime"
Documentation = "https://github.com/ori-platform/ori-runtime#readme"
Issues = "https://github.com/ori-platform/ori-runtime/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ori*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "ori.gateway.*",
    "ori.network.events",
    "ori.policy.*",
    "ori.reasoning.capability_posture",
    "ori.reasoning.escalation_policy",
    "ori.security.gateway_messages",
    "ori.security.remote_commands",
]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "ori.hal.*",
    "ori.hardware.*",
    "ori.skills.sandbox",
    "tests.*",
]
ignore_errors = true
